# MathCAT

PythonScripts/: pyproject.toml
docs/: test-exprs.html
docs/llvm-cov/html/: index.html
docs/llvm-cov/html/coverage/home/runner/work/MathCAT/MathCAT/src/: braille.rs.html  canonicalize.rs.html  chemistry.rs.html  definitions.rs.html  infer_intent.rs.html  interface.rs.html  lib.rs.html  main.rs.html  navigate.rs.html  prefs.rs.html  pretty_print.rs.html  shim_filesystem.rs.html  speech.rs.html  tts.rs.html  xpath_functions.rs.html
html/: index.html
html/coverage/home/runner/work/MathCAT/MathCAT/src/: braille.rs.html  canonicalize.rs.html  chemistry.rs.html  definitions.rs.html  infer_intent.rs.html  interface.rs.html  lib.rs.html  main.rs.html  navigate.rs.html  prefs.rs.html  pretty_print.rs.html  shim_filesystem.rs.html  speech.rs.html  tts.rs.html  xpath_functions.rs.html
src/: braille.rs  main.rs  prefs.rs  shim_filesystem.rs
